<resources>
    <string name="app_name">Первый эйс</string>
    <string name="emailEditTextHint">Почта</string>
    <string name="passwordHint">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="dontGetEmail">Не получили письмо?</string>
    <string name="recoverPassword">Восстановить пароль</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="authorize">Авторизация</string>
    <string name="repeatPasswordHint">Повторите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="recoveringPasswordTextHeader">Восстановление пароля</string>

    <string name="retry_loading">Повторить попытку</string>
    <string name="findBracelet">Поиск устройств</string>
    <string name="parent">Родитель</string>
    <string name="coach">Тренер</string>
    <string name="writings">Записи</string>
    <string name="schedule">Расписание</string>
    <string name="training_details">Детали тренировки</string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="date">Дата (yyyy-MM-dd)</string>
    <string name="time">Время начала</string>
    <string name="max_participants">Максимум человек</string>
    <string name="address">Адрес</string>
    <string name="additional_address_info">Адрес (доп информация: учреждение, зал)</string>
    <string name="group">Группа</string>
    <string name="birth_year">Год рождения</string>
    <string name="save">Сохранить</string>
    <string name="shop_link">Ссылка на магазин</string>
    <string name="partner_link">Ссылка на партнера</string>
    <string name="image_link">Ссылка на изображение</string>
    <string name="sign_up">Записаться</string>
    <string name="name">Имя</string>
    <string name="phone_number">Телефон</string>
    <string name="qualification">Квалификация</string>
    <string name="childrens">Дети:</string>
    <string name="add_children">+ Добавить ребенка</string>
    <string name="edit_image">Изменить фото</string>
    <string name="app_version">Версия 1.0.0</string>
    <string name="about_app_header">О приложении</string>
    <string name="notifications">Уведомления</string>
</resources>