<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorize"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.35"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="0.65">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    style="@style/EditTextAuthStyle"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailEditTextHint"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    style="@style/EditTextAuthStyle"
                    android:layout_marginTop="16dp"
                    android:inputType="textPassword"
                    android:hint="@string/passwordHint"/>

                <TextView
                    android:id="@+id/forgotPasswordTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotPassword"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:layout_marginStart="50dp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    style="@style/AuthMarginHorizontal"
                    android:layout_marginTop="32dp"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/registerTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>