<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addTrainingContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Заголовок -->
            <TextView
                android:id="@+id/titleTextView"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/training_details"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
                app:layout_constraintEnd_toStartOf="@id/deleteButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/trash"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Название тренировки -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/title"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Описание -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Дата и время -->
            <LinearLayout
                android:id="@+id/dateTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout">

                <!-- Дата -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        tools:text="2023-12-31" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Время -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:hint="@string/time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        tools:text="19:00" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Макс. количество участников -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxPersonInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/max_participants"
                app:layout_constraintTop_toBottomOf="@+id/dateTimeLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/maxPersonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Адрес -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/address"
                app:layout_constraintTop_toBottomOf="@+id/maxPersonInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Доп. информация об адресе -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressInfoInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/additional_address_info"
                app:layout_constraintTop_toBottomOf="@+id/addressInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressInfoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Группа и год рождения -->
            <LinearLayout
                android:id="@+id/groupBirthLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@+id/addressInfoInputLayout">

                <!-- Группа -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/group">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Год рождения -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthYearInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:hint="@string/birth_year">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthYearEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Кнопка сохранения -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/AuthMarginHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@+id/groupBirthLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>